@@ -98,3 +98,4 @@ Crash : During the reading of a scroll of repair. See forum.
 If you try to open a (closed) chest that stands on the place of open door, the game calls you idiot for no reason.
 Floating eyes can vomit.
 Selling activated holy grenades should be handled.
+Patheon book of Mellis etc
