@@ -614,3 +614,17 @@ monsterportal
   NameSingular = "magic portal";
   AttachedGod = MORTIFER;
 }
+
+coffin /* olterrain->decoration->olterraincontainer */
+{
+  Walkability = ETHEREAL;
+  DigMessage = "You smash the coffin into pieces. The spirits are not happy.";
+  CanBeDestroyed = true;
+  MainMaterialConfig == FIR_WOOD;
+  NameSingular = "coffin";
+  BitmapPos = 16, 272;
+  SitMessage = "The coffin is cold  to sit on.";
+  StorageVolume = 100000;
+  AttachedGod = MORTIFER;
+  LeftOverItems == NaturalMaterialForm { MainMaterial = 0 { Volume = 250:750; } Times = 1:2; }
+}
