@@ -6,6 +6,9 @@
  totally. The file is provided AS IS and is probably completely unreadable.
 
 -----------------------------------------------------------------------------
+July 23 2005 Heikki Sairanen <heikki.sairanen@gmail.com>
+
+  * coffin added	
 
 July 23 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>
 
